--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -29,7 +29,7 @@ account-dir .dataContainer {
 }
 
 account-dir #account #accountItem {
-  width: 44%;
+  width: 47%;
 }
 
 account-dir .userContent .cardInfo {
@@ -559,6 +559,7 @@ account-modelsetting #accountTeamSubHeader {
 #federationDialog .modelDialogError{
   color: #F44336;
 }
+
 /** Account Federations ***********************************************************************************************/
 account-federations .userContent {
   padding: 0 !important;
@@ -613,3 +614,51 @@ account-teamspaces label, account-teamspaces p {
   min-height: 200px;
 }
 
+
+/** Account Assign ***********************************************************************************************/
+account-assign .assignTabHolder {
+  padding: 20px;
+}
+
+account-assign .scrollable {
+  overflow-x: auto;
+}
+
+account-assign thead { 
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+account-assign .md-label {
+  line-height: 4;
+}
+
+account-assign h5 {
+  margin: 0;
+}
+
+account-assign md-checkbox span { 
+  font-size: 12px;
+}
+
+account-assign td, account-assign th {
+  min-width: 100px;
+  width: 100px;
+  text-align: center;
+}
+
+account-assign .userColumn {
+  width: 130px;
+}
+
+account-assign .rowSelects {
+    padding-right: 20px;
+}
+
+account-assign md-checkbox .md-container {
+  margin-left: 25%;
+}
+
+account-assign .radioButtons {
+  margin-left: 8px;
+}
