--- a/frontend/account/jade/accountInfo.jade
+++ b/frontend/account/jade/accountInfo.jade
@@ -17,7 +17,10 @@
 						h3 {{vm.firstName}} {{vm.lastName}}
 						p {{vm.email}}
 					md-divider
-				md-list-item.md-2-line.accountInfoPage(ng-repeat="(key, value) in vm.accountOptions", ng-click="vm.showItem(key)")
+				md-list-item.md-2-line.accountInfoPage(
+					ng-repeat="(key, value) in vm.accountOptions",
+					
+					ng-click="vm.showItem(key)")
 					div.md-list-item-text
 						h3 {{value.label}}
 					md-divider(ng-if="!$last")
