--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -23,7 +23,9 @@
 						input(type='password', ng-model='vm.user.password', ng-required, ng-keypress="vm.login($event)")
 
 					div(layout="row", layout-align="start" flex="none")
-						md-button.md-accent.md-raised(ng-click="vm.login()") Log In
+						md-button.md-accent.md-raised(
+							ng-click="vm.login()"
+						) Log In
 					h4.loginError {{vm.errorMessage}}
 					div(layout="row", layout-align="start center", flex="none")
 						a.loginLinks(href="passwordForgot") Forgot password?
