--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -285,6 +285,12 @@ account-menu md-icon {
   margin: 0;
 }
 
+.newModelDialog #modelRequiredHint {
+  text-align: center;
+  margin: 0;
+  color: #a3a3a3;
+}
+
 .newModelDialog #modelDialogError {
   margin: 0;
   color: #F44336;
