--- a/frontend/account/jade/modelDialog.jade
+++ b/frontend/account/jade/modelDialog.jade
@@ -6,7 +6,8 @@ md-dialog.newModelDialog(aria-label="New model")
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
 	md-content(layout-margin)
-		div(layout="column")
+	
+		form( name="modelForm" layout="column")
 			md-input-container
 				md-select(placeholder="Teamspace", tdr-focus="true", ng-model="vm.newModelData.teamspace", ng-keypress="vm.saveNewModel($event)")
 					md-option(
@@ -21,8 +22,9 @@ md-dialog.newModelDialog(aria-label="New model")
 			
 			md-input-container(ng-if="vm.teamspaceAndProjectSelected")
 				input(
-				placeholder="Model name", tdr-focus="true", 
+				placeholder="Model name (required)", tdr-focus="true", 
 				ng-model="vm.newModelData.name", 
+				ng-required="required"
 				ng-keypress="vm.saveNewModel($event)", 
 				ng-pattern="vm.modelRegExp" maxlength=20)
 				.inputHint Letters, numbers, hyphen and underscore only
@@ -30,7 +32,7 @@ md-dialog.newModelDialog(aria-label="New model")
 			md-input-container(ng-if="vm.teamspaceAndProjectSelected")
 				input(
 				ng-if="vm.teamspaceAndProjectSelected",
-				placeholder="Model Code (Optional)", 
+				placeholder="Model Code (optional)", 
 				ng-model="vm.newModelData.code", 
 				maxlength=5)
 
@@ -48,6 +50,8 @@ md-dialog.newModelDialog(aria-label="New model")
 			md-input-container(ng-if="vm.teamspaceAndProjectSelected")
 				label Unit
 				md-select(
+					ng-init="vm.newModelData.unit = vm.units[0].value"
+					ng-required="required"
 					ng-if="vm.teamspaceAndProjectSelected",
 					ng-model="vm.newModelData.unit")
 					md-option(ng-repeat="unit in vm.units", value="{{unit.value}}") {{unit.name}}
@@ -65,12 +69,16 @@ md-dialog.newModelDialog(aria-label="New model")
 				ng-if="vm.teamspaceAndProjectSelected",
 				placeholder="Revision description (optional)", ng-model="vm.desc")
 
+			p#modelRequiredHint(ng-if="vm.newModelButtonDisabled && vm.teamspaceAndProjectSelected") Please check input
+
 			md-input-container(ng-if="vm.teamspaceAndProjectSelected")
 				md-button.md-accent(
 					ng-if="vm.teamspaceAndProjectSelected",
 					ng-click="vm.uploadFileForNewModel()") Upload File
 				md-button.md-raised.md-accent(ng-disabled="vm.newModelButtonDisabled && vm.teamspaceAndProjectSelected", ng-click="vm.saveNewModel()") Save
 			#modelDialogFilenameContainer(layout="row", ng-if="vm.newModelFileToUpload")
-				p#modelDialogFilenameIntro Selected file
-				p#modelDialogFilename {{vm.newModelFileToUpload.name}}
-			p#modelDialogError(ng-if="vm.showNewModelErrorMessage") {{vm.newModelErrorMessage}}
+					p#modelDialogFilenameIntro Selected file
+					p#modelDialogFilename {{vm.newModelFileToUpload.name}}
+				p#modelDialogError(ng-if="vm.showNewModelErrorMessage") {{vm.newModelErrorMessage}}
+			
+			
