--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -8,7 +8,7 @@
 		.userContent(layout="column")
 
 			div.loginBox.loadingBox(layout="row")
-				h3 Welcome to 3D Repo!
+				h3.welcome Welcome to 3D Repo!
 				//div(ng-if="!vm.unityLoaded")
 					md-progress-circular
 					h4 Initialising Unity...
