--- a/frontend/account/jade/accountModels.jade
+++ b/frontend/account/jade/accountModels.jade
@@ -96,8 +96,7 @@
 											save-federation="vm.saveFederation"
 											on-show-page="vm.showPage(page, callingPage)"
 											accounts="vm.accounts"
-											subscriptions="vm.subscriptions"
-											)
+											subscriptions="vm.subscriptions")
 
 									p.no-federations(
 										ng-if="!vm.hasFederations(project.models)") No federations created
