--- a/frontend/account/jade/accountModels.jade
+++ b/frontend/account/jade/accountModels.jade
@@ -88,6 +88,7 @@
 											federation="federation"
 											project="project"
 											account="account"
+											is-saving="vm.isSaving"
 											federation-data="vm.federationData"
 											setup-federation-data="vm.setupFederationData"
 											get-potential-federation-models="vm.getPotentialFederationModels"
