--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -108,9 +108,10 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 					// Save/Cancel
 					#federationSave(layout="row", layout-align="start center")
 						md-button.md-raised.md-accent(
-							ng-disabled="vm.newFederationButtonDisabled", 
+							ng-disabled="vm.isSaving", 
 							ng-click="vm.saveFederation(vm.federationData.teamspace, vm.federationData.project)"
-							) Save
+							) Save 
+							md-progress-circular.isSavingProgress(ng-if="vm.isSaving")
 						md-button.md-accent(ng-click="vm.closeDialog()") Cancel
 
 					p.modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
