--- a/frontend/account/jade/accountModels.jade
+++ b/frontend/account/jade/accountModels.jade
@@ -54,7 +54,8 @@
 										p Models
 								
 								div(ng-if="vm.shouldShow(project, 'models')")
-									div(ng-repeat="model in vm.getIndividualModels(project.models)")
+									div(ng-repeat="model in vm.getIndividualModels(project.models)"
+										ng-if="model.name")
 										
 										account-model(
 										account="account.name"
@@ -82,7 +83,8 @@
 									
 								div(ng-if="vm.shouldShow(project, 'federations')")
 
-									div(ng-repeat="federation in vm.getFederations(project.models)")
+									div(ng-repeat="federation in vm.getFederations(project.models)"
+										ng-if="federation.name")
 										
 										account-federations(
 											federation="federation"
@@ -123,7 +125,8 @@
 										p Models
 								
 								div(ng-if="vm.showDefault['models']")
-									div(ng-repeat="model in account.models")
+									div(ng-if="model.name"
+										ng-repeat="model in account.models")
 
 										account-model(
 											account="account.name"
@@ -149,7 +152,7 @@
 											md-icon.angular-material-icons(ng-if="!vm.showDefault['feds']") folder 
 										p Federations
 
-								div(ng-if="vm.showDefault['feds']"
+								div(ng-if="vm.showDefault['feds'] && federation.name"
 									ng-repeat="(federationIndex, federation) in account.fedModels")
 
 									account-federations(
